# streamfog-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  justfile  lenses.json  pyproject.toml  run_server.py  start.ps1
native/: Cargo.toml  build.ps1  tauri.conf.json
native/icons/: icon.icns
native/src/: main.rs
src/streamfog_mcp/: __init__.py  __main__.py  _mcp.py  config.py  server.py
src/streamfog_mcp/services/: __init__.py  streamerbot.py
src/streamfog_mcp/tools/: __init__.py  core_tools.py
tests/: __init__.py  test_basic.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/pages/: Dashboard.tsx
