[project]
name = "streamfog-mcp"
version = "0.1.0"
description = "Streamfog MCP server — AR lens and face-filter orchestration for OBS live streams via Streamer.bot bridge"
authors = [
    { name = "Sandra Schipal", email = "sandra@schipal.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
]

[project.scripts]
streamfog-mcp = "streamfog_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.9"]

[dependency-groups]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamfog_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
ignore = ["RUF001", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
